--------------------------

--------------------------------------------
                  CURRENT
--------------------------------------------

Version 0.4s
------------
* Added a missing Terry-mpreg-pc trigger for his Worship -> Anal catch scene
* Made an adjustment to the run formula, which should work as intended now
* Meditation scenes added for the player, allowing you to drain lust

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.4r
------------
* Yet more typos
* Fixed so that the new cats scene [Present] option properly activates mpreg for those that have the perk
* Felines now tend to come in bigger groups than before
* Miranda has had a bit of a revamp of her talk menu, plus a bunch of typos fixed. Some new topics
* Catboy and Centauress should give significantly higher xp rewards now
* Clarified a section of the Search for the Scepter quest log, pointing you to where to go
* Defeated Lagon has been revamped and replaced with new content. Written by LD and QB, and sponsored by Patreon
* Added gulp as alternate build system (thanks ElAcechador on github). This changed the effective file to run if you are playing from git - run foe_debug.html instead of foe.html. If you are running online or using the downloaded zip, ignore this and play as usual

Version 0.4q
------------
* CK took care of a whole bunch of typos
* Added a warning message to the save screen
* Fixed the requirement for Gwendy's Double Dildo scene. You need a cap of 8 instead of 30, so you might need to work your way up a bit first
* New mob added to the Highlands: the catboy mage, written by The Observer. Packs a magical punch
* New mob added to the Highlands: the centauress, written by The Observer. Packs a physical punch
* The regular felines have a new loss scene if you happen across two of them with cocks. Patreon sponsored and written by a new writer, Tala