@@ -28,6 +28,7 @@ function Layla(storage) {
 	this.jobs["Mystic"]    = new JobDesc(Jobs.Mystic); this.jobs["Mystic"].mult = 1.2;
 	this.jobs["Healer"]    = new JobDesc(Jobs.Healer); this.jobs["Healer"].mult = 1.2;
 	
+	this.jobs["Elementalist"] = new JobDesc(Jobs.Elementalist); this.jobs["Elementalist"].mult = 1.2;
 	this.jobs["Hypnotist"] = new JobDesc(Jobs.Hypnotist); this.jobs["Hypnotist"].mult = 1.2;
 	
 	this.maxHp.base        = 100;
