@@ -10,6 +10,7 @@ Version 0.4s
 * Added a missing Terry-mpreg-pc trigger for his Worship -> Anal catch scene
 * Made an adjustment to the run formula, which should work as intended now
 * Meditation scenes added for the player, allowing you to drain lust
+* Added the elementalist job (learned from Jeanne)
 
 --------------------------------------------
              PREVIOUS VERSIONS
